--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,9 +1,14 @@
 <header>
+  <img src="../assets/moneyMap_logo.png" alt="Logo da Aplicação" class="logo">
+  <h1>MoneyMap</h1>
   <nav>
+    
     <ul>
-      <li><a href="/">Página Inicial</a></li>
-      <li><a href="/about">Sobre Nós</a></li>
-      <!-- Adicione outras opções de navegação conforme necessário -->
+      <li><a href="/">Dashboard</a></li>
+      <li><a href="/transactions">Transações</a></li>
+      <li><a href="/categories">Categorias</a></li>
+      <li><a href="/goals">Metas</a></li>
     </ul>
   </nav>
+
 </header>
