--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= pageTitle %></title>  
-  <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-  <!-- Inclui o cabeçalho como um partial -->
-  <%- include('../components/header') %>
-
-  <main>
-    <!-- Renderiza o conteúdo da página específica -->
-    <%- include(content) %>
-  </main>
-
-  <footer>
-    <% include('../components/footer') %>
-  </footer>
-
-  <!-- Adicione scripts JS se necessário -->
-  <script src="/js/script.js"></script>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= pageTitle %></title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/css/footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body class="app-container">
+    <!-- Inclui o cabeçalho como um partial -->
+    
+    <main>
+      <!-- Renderiza o conteúdo da página específica -->
+      <%- include('../pages/' + content) %>
+    </main>
+    <!-- Inclui o footer como um partial -->
+    
+    <!-- Scripts -->
+    <script src="/js/api.js"></script>
+    <script src="/js/app.js"></script>
+  </body>
 </html>
