--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -10,16 +10,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body class="app-container">
     <!-- Inclui o cabeçalho como um partial -->
-    
+
     <main>
       <!-- Renderiza o conteúdo da página específica -->
       <%- include('../pages/' + content) %>
     </main>
     <!-- Inclui o footer como um partial -->
-    
+
     <!-- Scripts -->
     <script src="/js/api.js"></script>
     <script src="/js/app.js"></script>
